--- a/index.html
+++ b/index.html
@@ -416,10 +416,10 @@
 								<nav class="mobile-fit-control hide">
 									<ul id="menu-menu" class="menu">
 										<li class="current-menu-item"><a href="" aria-current="page">🌈 首页</a></li>
-										<li><a href="">📂 归档</a>
+										<li><a href="timeline.html">📂 归档</a>
 
 											<ul class="sub-menu">
-												<li><a href="">笔记 📔</a></li>
+												<li><a href="view.html">笔记 📔</a></li>
 											</ul>
 										</li>
 
@@ -428,7 +428,7 @@
 												<li><a href="">电影 🎞️</a></li>
 												<li><a href="">番剧 🍨</a></li>
 												<li><a href="">游戏 🎮</a></li>
-												<li><a href="">歌单 🎵</a></li>
+												<li><a href="song list.html">歌单 🎵</a></li>
 											</ul>
 										</li>
 
@@ -436,7 +436,7 @@
 
 										<li><a href="">📌 关于</a>
 											<ul class="sub-menu">
-												<li><a href="">我? 👑</a></li>
+												<li><a href="about.html">我? 👑</a></li>
 											</ul>
 										</li>
 
@@ -790,9 +790,9 @@
 			</div>
 			<ul id="menu-menu-1" class="menu">
 				<li class="current-menu-item"><a href="" aria-current="page">🌈 首页</a></li>
-				<li><a href="">📂 归档</a>
+				<li><a href="timeline.html">📂 归档</a>
 					<ul class="sub-menu">
-						<li><a href="">笔记 📔</a></li>
+						<li><a href="view.html">笔记 📔</a></li>
 					</ul>
 				</li>
 				<li><a href="#">🎯 清单</a>
@@ -800,13 +800,13 @@
 						<li><a href="https://fairysen.com/movie/">电影 🎞️</a></li>
 						<li><a href="https://fairysen.com/anime/">番剧 🍨</a></li>
 						<li><a href="https://fairysen.com/game/">游戏 🎮</a></li>
-						<li><a href="https://fairysen.com/music/">歌单 🎵</a></li>
+						<li><a href="song list.html">歌单 🎵</a></li>
 					</ul>
 				</li>
 				<li><a href="https://fairysen.com/leave/">📝 留言板</a></li>
 				<li><a href="#">📌 关于</a>
 					<ul class="sub-menu">
-						<li><a href="https://fairysen.com/about/">我? 👑</a></li>
+						<li><a href="about.html">我? 👑</a></li>
 					</ul>
 				</li>
 				<li><a href="#">👀 看看</a>
